--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,7 @@
         </activity>
         <activity android:name=".ChatActivity"></activity>
         <activity android:name=".MemberActivity"></activity>
+        <activity android:name=".jsonactivity"></activity>
     </application>
 
 </manifest>
